--- a/ChessUI/Resource.qrc
+++ b/ChessUI/Resource.qrc
@@ -17,6 +17,7 @@
     <file>../Images/edit.png</file>
     <file>../Images/openbook.png</file>
     <file>../Images/endbook.png</file>
+    <file>../Images/robot.png</file>
     <file>../Images/mybook.png</file>
     <file>../Images/bookmark.png</file>
     <file>../Images/restart.png</file>
