--- a/ChessUI/Resource.qrc
+++ b/ChessUI/Resource.qrc
@@ -21,6 +21,7 @@
     <file>../Images/mybook.png</file>
     <file>../Images/bookmark.png</file>
     <file>../Images/restart.png</file>
+    <file>../Images/cloud_search.png</file>
     <file>../Images/left_right.png</file>
     <file>../Images/up_down.png</file>
     <file>../Images/exit.png</file>
