online game init

--- a/ChessUI/Resource.qrc
+++ b/ChessUI/Resource.qrc
@@ -34,6 +34,7 @@
     <file>../ImgRes/exit.png</file>
     <file>../ImgRes/search.png</file>
     <file>../ImgRes/online.png</file>
+    <file>../ImgRes/capture.png</file>
     <file>../ImgRes/star.png</file>
     <file>../ImgRes/good.png</file>
     <file>../ImgRes/sad.png</file>
